# onchainWallet

./: .env.example  Cargo.toml  PROJECT_FILE_STRUCTURE.md  PROJECT_PLAN.md  README.md  README_CN.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_PHASE2_PHASE3_GUIDE.md  docker-compose.yml
docs/: 功能描述文档.md  技术重点及设计文档.md
migrations/: 001_init.sql  002_enhanced_features.sql
product/: product.md  配置.txt
report/: FINAL_SECURITY_AUDIT_REPORT.md  FUNCTIONAL_TEST_REPORT.md  README.md  SECURITY_TEST_REPORT.md  transaction_hashes.json
src/: main.rs
src/api/: mod.rs
src/middleware/: auth.rs  error_handler.rs  mod.rs  rate_limit.rs  security_headers.rs
src/models/: mod.rs  types.rs
src/services/: address_book.rs  analytics.rs  batch_transfer.rs  defi.rs  gas.rs  key_manager.rs  mod.rs  multisig.rs  nft.rs  token.rs  transaction_history.rs  webhook.rs
src/services/audit/: mod.rs
src/services/blockchain/: adapter.rs  ethereum.rs  mod.rs  solana.rs
src/services/deposit/: mod.rs
src/services/risk/: mod.rs
src/services/scheduler/: mod.rs
src/services/wallet/: mod.rs
src/services/withdrawal/: mod.rs
